--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
-
-<h1>aditya</h1>
-<app-c1></app-c1>
+<app-header></app-header>
+<main>
 <app-post-create></app-post-create>
+<app-post-list></app-post-list>
+
+</main>
