--- a/src/app/pannel/pannel.component.html
+++ b/src/app/pannel/pannel.component.html
@@ -1,13 +1,8 @@
-<!-- <mat-accordion>
+<mat-accordion>
     <mat-expansion-panel *ngFor="let post of posts">
         <mat-expansion-panel-header>
             {{post.title}}
         </mat-expansion-panel-header>
         <p>{{post.content}}</p>
     </mat-expansion-panel>
-</mat-accordion> -->
-
-
-<div *ngFor="let post of posts">
-    {{post.title}}
-</div>
+</mat-accordion>
