--- a/src/app/aditya/aditya.component.html
+++ b/src/app/aditya/aditya.component.html
@@ -1,1 +1,9 @@
-<p>aditya works!</p>
+<mat-accordion>
+    <mat-expansion-panel *ngFor="let post of posts">
+        <mat-expansion-panel-header>
+            {{post.title}}
+        </mat-expansion-panel-header>
+        <p>{{post.content}}</p>
+    </mat-expansion-panel>
+</mat-accordion>
+aaaa
