--- a/src/app/post-create/post-create.component.html
+++ b/src/app/post-create/post-create.component.html
@@ -2,11 +2,12 @@
     <mat-form-field>
         <textarea matinput [value]="newPost" #postInput [(ngModel)]="enteredValue"></textarea>
     </mat-form-field>
+    
     <!-- <textarea matinput [(ngModel)]="enteredValue">{{enteredValue}}</textarea> -->
     <hr>
-    <button (click)="onAddPost(postInput)" mat-raised-button color="primary" >save post</button>
+    <!-- <button (click)="onAddPost(postInput)" mat-raised-button color="primary" >save post</button> -->
 </mat-card>
-<p>{{newPost}}</p>
+<!-- <p>{{newPost}}</p> -->
 <hr>
 <hr>
 <!-- <P>{{enteredValue}}</P> -->
