--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <app-header></app-header>
 <app-post-create></app-post-create>
     <app-post-list></app-post-list>
-
+<app-navbar-component></app-navbar-component>
 
 
 
